--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     var body_loaded = function () {
       sock = new io.Socket();
       sock.on('message', handleMessage);
+      sock.connect();
       ts = document.getElementById('timestamp');
     };
     var handleMessage = function (data) {
