--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     var sock = null;
     var ts = null;
     var body_loaded = function () {
-      sock = new io.Socket(null, {port: 80, transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']});
+      sock = new io.Socket(null, {
+        port: 80,
+        // transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
+        transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'jsonp-polling']
+      });
       sock.on('message', handleMessage);
       sock.connect();
       ts = document.getElementById('timestamp');
