--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     var body_loaded = function () {
       sock = new io.Socket(null, {
         port: 80,
-        // transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
-        transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'jsonp-polling']
+        transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
+        // transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'jsonp-polling']
       });
       sock.on('message', handleMessage);
       sock.connect();
