--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         // ,
         // ,transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
         // ,transports: ['websocket']
+        , rememberTransport: false
       });
       sock.on('message', handleMessage);
       sock.connect();
