only websocket test

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         port: 80
         // ,
         // ,transports: ['websocket', 'flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
-        // ,transports: ['websocket']
+        , transports: ['websocket']
         , rememberTransport: false
       });
       sock.on('message', handleMessage);
